--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: utils
 Priority: optional
 Maintainer: Jonas Smedegaard <dr@jones.dk>
 Uploaders: Micah Anderson <micah@debian.org>
-Build-Depends: cdbs (>= 0.4.72~),
+Build-Depends: cdbs,
  debhelper,
  dh-buildinfo,
  devscripts,
