--- a/debian/control
+++ b/debian/control
@@ -20,8 +20,8 @@ Build-Depends: cdbs,
  libboost-test-dev (>> 1.35) | libboost-test1.35-dev
 Standards-Version: 3.9.3
 Homepage: http://www.bitcoin.org/
-Vcs-Git: git://git.debian.org/git/pkg-bitcoin/bitcoin
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-bitcoin/bitcoin.git
+Vcs-Git: git://git.debian.org/git/collab-maint/bitcoin
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/bitcoin.git
 
 Package: bitcoind
 Architecture: any-alpha any-amd64 any-arm any-i386 any-ia64 any-mipsel any-sh4
