--- a/debian/control.in
+++ b/debian/control.in
@@ -23,7 +23,7 @@ Description: peer-to-peer network based digital currency - daemon
  By default connects to an IRC network to discover other peers.
  .
  Full transaction history is stored locally at each client.  This
- requires 150+ MB of space, slowly growing.
+ requires several GB of space, slowly growing.
  .
  This package provides bitcoind, a combined daemon and CLI tool to
  interact with the daemon.
