--- a/debian/rules
+++ b/debian/rules
@@ -32,6 +32,8 @@ DEB_UPSTREAM_TARBALL_MD5 = e019911ef8c6d7c33915560e98c188a5
 # Ignore graphics and .mo files in addition to the default debian files
 DEB_COPYRIGHT_CHECK_IGNORE_REGEX = ^(doc/bitcoin_logo_doxygen\.png|src/qt/res/icons/.*\.png|contrib/Bitcoin.app/Contents/Resources/BitcoinAppIcon\.icns|contrib/gitian-downloader/sipa-key\.pgp|debian/(changelog|copyright(|_hints|_newhints)))$
 
+HOME = $(CURDIR)/debian/home#see http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=696262
+
 DEB_SRCDIR = src
 
 DEB_MAKE_MAKEFILE = makefile.unix
@@ -77,9 +79,12 @@ DEB_INSTALL_DOCS_ALL =
 
 pre-build::
 	mkdir -p src/obj/nogui
+	mkdir -p debian/home/.bitcoin
+
 clean::
 	find src/obj -type f -not -name .gitignore -delete
 	rm -f src/bitcoind
+	rm -rf debian/home
 
 # Ensure wrapper is set executable
 binary-post-install/bitcoind::
