Revert "Ran 'DEB_MAINTAINER_MODE=1 fakeroot debian/rules clean'.": was done with older CDBS.
This reverts commit 24fcdc905cfced3d26e79e298579e5dcf084148b.

--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: optional
 Maintainer: Debian Bitcoin Packaging Team <pkg-bitcoin-devel@lists.alioth.debian.org>
 Uploaders: Jonas Smedegaard <dr@jones.dk>, Micah Anderson <micah@debian.org>,
  Scott Howard <showard@debian.org>
-Build-Depends: cdbs (>= 0.4.85~),
- debhelper (>= 8~),
+Build-Depends: cdbs,
+ debhelper,
  dh-buildinfo,
  devscripts,
  libboost-system-dev,
