--- a/debian/rules
+++ b/debian/rules
@@ -32,8 +32,12 @@ DEB_UPSTREAM_TARBALL_MD5 = e019911ef8c6d7c33915560e98c188a5
 # Ignore graphics and .mo files in addition to the default debian files
 DEB_COPYRIGHT_CHECK_IGNORE_REGEX = ^(doc/bitcoin_logo_doxygen\.png|src/qt/res/icons/.*\.png|contrib/Bitcoin.app/Contents/Resources/BitcoinAppIcon\.icns|contrib/gitian-downloader/sipa-key\.pgp|debian/(changelog|copyright(|_hints|_newhints)))$
 
-#see http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=696262
-HOME = $(CURDIR)/debian/home
+#testsuite needs writable $HOME (see bug#696262)
+fakehome = $(CURDIR)/debian/home
+pre-build::
+	mkdir -p "$(fakehome)"
+clean::
+	rm -rf "$(fakehome)"
 
 # Use per-package targets and variables for daemon build rules
 # TODO: instead use per-flavor variables, when supported by qmake.mk
@@ -44,7 +48,7 @@ debian/stamps-perpkg-build/bitcoind:
 	mkdir -p debian/stamps-perpkg-build
 	+$(DEB_MAKE_INVOKE)
 	$(if $(filter nocheck,$(DEB_BUILD_OPTIONS)),,$(DEB_MAKE_INVOKE) test_bitcoin)
-	$(if $(filter nocheck,$(DEB_BUILD_OPTIONS)),,src/test_bitcoin)
+	$(if $(filter nocheck,$(DEB_BUILD_OPTIONS)),,HOME="$(fakehome)" src/test_bitcoin)
 	touch $@
 DEB_PHONY_RULES += clean/bitcoind
 clean/bitcoind::
@@ -96,13 +100,11 @@ DEB_INSTALL_DOCS_ALL =
 
 pre-build::
 	mkdir -p src/obj/nogui
-	mkdir -p debian/home/.bitcoin
 
 clean::
 	find src/obj -type f -not -name .gitignore -delete
 	rm -f build/build.h
 	rm -f src/bitcoind
-	rm -rf debian/home
 
 # Ensure wrapper is set executable
 binary-post-install/bitcoind::
