--- a/debian/rules
+++ b/debian/rules
@@ -22,7 +22,8 @@ include /usr/share/cdbs/1/class/qmake.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/rules/utils.mk
 
-DEB_BUILD_PARALLEL = 1
+# linker failures suspected to be caused by parallel builds unsupported
+#DEB_BUILD_PARALLEL = 1
 
 DEB_UPSTREAM_URL = https://github.com/bitcoin/bitcoin/archive
 DEB_UPSTREAM_TARBALL_BASENAME = v$(DEB_UPSTREAM_TARBALL_VERSION)
