--- a/debian/rules
+++ b/debian/rules
@@ -63,9 +63,9 @@ build/bitcoind:: debian/stamps-perpkg-build/bitcoind
 debian/stamps-perpkg-build/bitcoind:
 	mkdir -p debian/stamps-perpkg-build
 	+$(DEB_MAKE_INVOKE)
-	@echo "Debug output for #672524"
-	pwd
-	ls -Rl .
+	#@echo "Debug output for #672524"
+	#pwd
+	#ls -Rl .
 	$(if $(filter nocheck,$(DEB_BUILD_OPTIONS)),,$(DEB_MAKE_INVOKE) test_bitcoin)
 	$(if $(filter nocheck,$(DEB_BUILD_OPTIONS)),,HOME="$(fakehome)" src/test_bitcoin)
 	touch $@
