--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: cdbs,
  dh-buildinfo,
  devscripts,
  libminiupnpc-dev,
+ libboost-chrono-dev,
  libboost-system-dev,
  libboost-filesystem-dev,
  libboost-program-options-dev,
@@ -25,7 +26,7 @@ Build-Depends: cdbs,
  protobuf-compiler
 Standards-Version: 3.9.5
 Homepage: http://www.bitcoin.org/
-Vcs-Git: git://git.debian.org/git/collab-maint/bitcoin
+Vcs-Git: git://anonscm.debian.org/collab-maint/bitcoin
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/bitcoin.git
 
 Package: bitcoind
