--- a/debian/bitcoin-qt.desktop
+++ b/debian/bitcoin-qt.desktop
@@ -3,9 +3,9 @@ Name=Bitcoin
 Comment=Bitcoin P2P Cryptocurrency
 Comment[fr]=Bitcoin, monnaie virtuelle cryptographique pair à pair
 Comment[tr]=Bitcoin, eşten eşe kriptografik sanal para birimi
-Exec=/usr/bin/bitcoin-qt
+Exec=bitcoin-qt %u
 Terminal=false
 Type=Application
 Icon=bitcoin
 MimeType=x-scheme-handler/bitcoin;
-Categories=Office;
+Categories=Office;Finance;
