--- a/debian/rules
+++ b/debian/rules
@@ -128,7 +128,7 @@ bdbstablever = 4.8
 CDBS_BUILD_DEPENDS += , libdb$(bdbver)++-dev | libdb$(bdbstablever)++-dev
 CDBS_SUGGESTS_bitcoind = db$(bdbver)-util, db$(bdbstablever)-util
 
-CDBS_BUILD_DEPENDS += , libssl-dev, pkg-config
+CDBS_BUILD_DEPENDS += , libssl-dev, pkg-config, python
 
 # Build dependencies for the bitcoin-qt package
 CDBS_BUILD_DEPENDS += , libqt4-dev, libqrencode-dev
