--- a/debian/bitcoin-qt.desktop
+++ b/debian/bitcoin-qt.desktop
@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Name=Bitcoin
 Comment=Bitcoin P2P Cryptocurrency
 Comment[fr]=Bitcoin, monnaie virtuelle cryptographique pair à pair
