--- a/debian/rules
+++ b/debian/rules
@@ -54,6 +54,7 @@ override_dh_installchangelogs:
 override_dh_install:
 	dh_install --list-missing
 
+DEB_UPSTREAM_VERSION = $(shell dpkg-parsechangelog | sed -rne 's,^Version: ([^-]+).*,\1,p')
 override_dh_makeshlibs:
 	dh_makeshlibs -V -- -c0 -v$(DEB_UPSTREAM_VERSION)
 
