--- a/debian/rules
+++ b/debian/rules
@@ -59,7 +59,7 @@ override_dh_makeshlibs:
 	dh_makeshlibs -V -- -c0 -v$(DEB_UPSTREAM_VERSION)
 
 override_dh_auto_test:
-	xvfb-run -a dh_auto_test
+	xvfb-run -a dh_auto_test || ( cat src/test-suite.log && false )
 
 get-orig-source:
 	uscan --download-current-version
