--- a/debian/control
+++ b/debian/control
@@ -21,8 +21,7 @@ Build-Depends: autotools-dev, bash-completion, dh-exec,
  dh-autoreconf,
  libprotobuf-dev,
  protobuf-compiler,
- python,
- xvfb, xauth
+ python
 Standards-Version: 3.9.6
 Homepage: http://www.bitcoin.org/
 Vcs-Git: git://anonscm.debian.org/collab-maint/bitcoin
