--- a/debian/control
+++ b/debian/control
@@ -58,6 +58,22 @@ Description: peer-to-peer network based digital currency - GUI
  .
  This package provides Bitcoin-Qt, a GUI for Bitcoin based on Qt.
 
+Package: bitcoin-tx
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: peer-to-peer network based digital currency - transaction tool
+ Bitcoin is a free open source peer-to-peer electronic cash system that
+ is completely decentralized, without the need for a central server or
+ trusted parties.  Users hold the crypto keys to their own money and
+ transact directly with each other, with the help of a P2P network to
+ check for double-spending.
+ .
+ Full transaction history is stored locally at each client.  This
+ requires 20+ GB of space, slowly growing.
+ .
+ This package provides bitcoin-tx, a command line tool for creating,
+ parsing, or modifying transactions.
+
 Package: libbitcoinconsensus0
 Section: libs
 Multi-Arch: same
