use qt5 instead of qt4

--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Build-Depends: autotools-dev, bash-completion, dh-exec,
  libdb++-dev,
  libssl-dev,
  pkg-config,
- libqt4-dev,
+ qtbase5-dev, qt5-qmake, qttools5-dev-tools,
  libqrencode-dev,
  dh-autoreconf,
  libprotobuf-dev,
