add dep on libevent-dev

--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends: autotools-dev, bash-completion, dh-exec,
  libssl-dev,
  pkg-config,
  qtbase5-dev, qt5-qmake, qttools5-dev-tools,
+ libevent-dev,
  libqrencode-dev,
  dh-autoreconf,
  libprotobuf-dev,
