add dep on libzmq

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends: autotools-dev, bash-completion, dh-exec,
  pkg-config,
  qtbase5-dev, qt5-qmake, qttools5-dev-tools,
  libevent-dev,
+ libzmq3-dev (>= 4) | libzmq5-dev,
  libqrencode-dev,
  dh-autoreconf,
  libprotobuf-dev,
