--- a/debian/control
+++ b/debian/control
@@ -39,8 +39,8 @@ Description: peer-to-peer network based digital currency - daemon
  transact directly with each other, with the help of a P2P network to
  check for double-spending.
  .
- Full transaction history is stored locally at each client.  This
- requires several GB of space, slowly growing.
+ Unless pruning is enabled, full global transaction history is stored
+ locally at each client, which may require large amounts of disk space.
  .
  This package provides the daemon, bitcoind, and the CLI tool,
  bitcoin-cli, to interact with the daemon.
@@ -55,8 +55,8 @@ Description: peer-to-peer network based digital currency - GUI
  transact directly with each other, with the help of a P2P network to
  check for double-spending.
  .
- Full transaction history is stored locally at each client.  This
- requires 20+ GB of space, slowly growing.
+ Unless pruning is enabled, full global transaction history is stored
+ locally at each client, which may require large amounts of disk space.
  .
  This package provides Bitcoin-Qt, a GUI for Bitcoin based on Qt.
 
@@ -70,8 +70,8 @@ Description: peer-to-peer network based digital currency - transaction tool
  transact directly with each other, with the help of a P2P network to
  check for double-spending.
  .
- Full transaction history is stored locally at each client.  This
- requires 20+ GB of space, slowly growing.
+ Unless pruning is enabled, full global transaction history is stored
+ locally at each client, which may require large amounts of disk space.
  .
  This package provides bitcoin-tx, a command line tool for creating,
  parsing, or modifying transactions.
